--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
   </head>
   <body>
     <h1>Welcome to the AI Contemporary Poem Generator</h1>
+    <footer>
+      This AI project was coded with 💙 by
+      <a
+        href="https://www.shecodes.io/graduates/79171-emma-whitney"
+        target="_blank"
+        >Emma Whitney</a
+      >, is
+      <a
+        href="https://github.com/EmLu26/contemporary-poem-generator"
+        target="_blank"
+        >open-sourced on GitHub</a
+      >
+      and is
+      <a
+        href="https://ai-contemporary-poem-generator.netlify.app/"
+        target="_blank"
+        >hosted on Netlify.</a
+      >
+    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
