--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
-    <title>AI Poem Generator</title>
+    <title>AI Contemporary Poem Generator</title>
   </head>
   <body>
-    <h1>Welcome to the AI Contemporary Poem Generator</h1>
+    <header>
+      <h1>AI Contemporary Poem Generator</h1>
+    </header>
+
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter the topic of the contemporary poem"
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+      <div>
+        The poem will be here.
+        <br />
+        The poem will also be here.
+      </div>
+    </main>
+
     <footer>
       This AI project was coded with 💙 by
       <a
