--- a/index.html
+++ b/index.html
@@ -7,47 +7,50 @@
     <title>AI Contemporary Poem Generator</title>
   </head>
   <body>
-    <header>
-      <h1>AI Contemporary Poem Generator</h1>
-    </header>
+    <div class="container">
+      <header>
+        <h1>AI Contemporary Poem Generator</h1>
+      </header>
 
-    <main>
-      <form>
-        <input
-          type="text"
-          placeholder="Enter the topic of the contemporary poem"
-          autofocus
-          required
-          autocomplete="off"
-        />
-        <input type="submit" />
-      </form>
-      <div>
-        The poem will be here.
-        <br />
-        The poem will also be here.
-      </div>
-    </main>
+      <main>
+        <form>
+          <input
+            type="text"
+            placeholder="Enter the topic of the contemporary poem"
+            autofocus
+            required
+            autocomplete="off"
+            class="instructions"
+          />
+          <input type="submit" class="submit-button" />
+        </form>
+        <div class="poem">
+          The poem will be here.
+          <br />
+          The poem will also be here.
+        </div>
+      </main>
 
-    <footer>
-      This AI project was coded with 💙 by
-      <a
-        href="https://www.shecodes.io/graduates/79171-emma-whitney"
-        target="_blank"
-        >Emma Whitney</a
-      >, is
-      <a
-        href="https://github.com/EmLu26/contemporary-poem-generator"
-        target="_blank"
-        >open-sourced on GitHub</a
-      >
-      and is
-      <a
-        href="https://ai-contemporary-poem-generator.netlify.app/"
-        target="_blank"
-        >hosted on Netlify.</a
-      >
-    </footer>
+      <footer>
+        This AI project was coded with 💙 by
+        <a
+          href="https://www.shecodes.io/graduates/79171-emma-whitney"
+          target="_blank"
+          >Emma Whitney</a
+        >, is
+        <a
+          href="https://github.com/EmLu26/contemporary-poem-generator"
+          target="_blank"
+          >open-sourced on GitHub</a
+        >
+        and is
+        <a
+          href="https://ai-contemporary-poem-generator.netlify.app/"
+          target="_blank"
+          >hosted on Netlify.</a
+        >
+      </footer>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
